log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
ju., 30 de mar. de 2023 17:45:58: 
 arraylist.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  2|5
total_score: 10/70
572cba7
ju., 30 de mar. de 2023 17:48:31: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ec0e9f9
ju., 30 de mar. de 2023 17:50:26: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
aacdbd1
ju., 30 de mar. de 2023 18:02:33: 
 arraylist.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  10|2
total_score: 40/70
dca8f38
ju., 30 de mar. de 2023 18:05:14: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
arraylist.c: In function 'pop':
arraylist.c:64:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(l->size = 0)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
448d0b8
